PyMaker/datas/object2/RawHTML/i10401/Python_DOC_referPages.getting-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>Im getting this error bellow when I run my python script.</p>
<pre><code>        File "supreme.py", line 24
    print UTCtoEST(),':: Parsing page...'
                 ^
SyntaxError: invalid syntax
</code></pre>
<p>Preview of the part of the script:</p>
<pre><code>import sys, json, time, requests, urllib2
from datetime import datetime

qty='1'

def UTCtoEST():
    current=datetime.now()
    return str(current) + ' EST'
print
poll=raw_input("Polling interval? ")
poll=int(poll)
keyword=raw_input("Product name? ").title()       # hardwire here by declaring keyword as a string 
color=raw_input("Color? ").title()                # hardwire here by declaring keyword as a string
sz=raw_input("Size? ").title()                    # hardwire here by declaring keyword as a string
print 
print UTCtoEST(),':: Parsing page...'
def main():.....
</code></pre>
<p>Any fix for this? Need help</p>
<p>Thanks in advance.</p>
</div>
<div class="post-text" itemprop="text">
<p>Seems like your issue here is not the code, but the version of Python you are running it with. Your code is written in Python 2.7, but you are running with Python 3.5.</p>
<p>Option one, run with Python 2.7.</p>
<p>Option two, change the code...</p>
<pre><code># imports ^

qty='1'

def UTCtoEST():
    current=datetime.now()
    return str(current) + ' EST'

print
poll=input("Polling interval? ")
poll=int(poll)
keyword=input("Product name? ").title()
color=input("Color? ").title()
sz=input("Size? ").title()
print
print(UTCtoEST(),':: Parsing page...')
</code></pre>
</div>
<span class="comment-copy">The code you have above works fine. Is it possible you are running this with Python3 by mistake?</span>
<span class="comment-copy">Yes I am running 3.5.2 any way to get it working on that?</span>
<span class="comment-copy">You tagged this as a Python 2.7 question, which is very misleading.</span>
<span class="comment-copy">Please have a look at the <a href="https://docs.python.org/3/howto/pyporting.html" rel="nofollow noreferrer">Python 3 migration guide</a>.</span>
<span class="comment-copy">Thanks Matt the second option works but seems like I need to edit mostly all the code. So how do I go by doing option one. If you can help me with that It will be fantastic.</span>
<span class="comment-copy">@AlfredoNatal, just download python 2.7 and run it from there if you are going with Matt's first option.</span>
